--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ Django==5.2.1
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+drf-nested-routers==0.94.2
 PyJWT==2.9.0
 sqlparse==0.5.3
 typing_extensions==4.13.2
